modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	new file:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/forms.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/forms.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0005_alter_product_percentage_discount.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0005_alter_product_percentage_discount.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/models.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/register.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/upload.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/register.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/register.html
@@ -1,7 +1,8 @@
 <!-- Register form -->
 <div id="signup-form" class="modal">
     <div class="form-container modal-content animate">
-        <form action="" method="post">
+        <form action="{% url 'register' %}" method="POST">
+            {% csrf_token %}
             <div class="img">
                 <span id="close-signup-form" class="close">&times;</span>
                 <img src="/static/images/avatar.png" alt="avatar" class="avatar" width="20%"> 
