modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/static/js/main.js 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/all_categories.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/base.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/category.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/index.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/product.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/product.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/product.html
@@ -12,6 +12,7 @@
 {% block content %}
     
     <!-- Product Cart Container -->
+ 
     <div class="product-container">
         <div class="product-image-card">
             <div class="profile-image">
@@ -25,11 +26,16 @@
             </div>
         </div>
         <div class="product-information">
-            <h3>LEVI'S WOMEN'S XL TRUCKER JACKET</h3> 
-            <h4>Price: <del>$170</del>&nbsp; $140</h4>
-            <p>Lorem,  dolor eveniet alias eos ullam nesciunt voluptatum.</p>
-            <p>Lorem ipsum dolor  delectus, maxime inventore optio fuga nisi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellat odit dolor incidunt quaerat quo saepe unde asperiores, consectetur eum esse, quam, impedit dolores vel ea. Iste, suscipit, nesciunt laboriosam cum officia magnam dolores pariatur qui labore totam eum a eveniet ullam optio expedita et possimus maxime saepe sunt quidem.</p>
+            
+            {% if product.is_sale %}
+            <h3>{{ product.name }}</h3> 
+            <h4>Price: <del>${{ product.price }}</del>&nbsp; ${{ product.sale_price }}</h4>
+            <p>{{ product.description }}</p>
+            {% else %}
+            <h3>{{ product.name }}</h3> 
+            <h4>Price: ${{ product.price }}</h4>
+            <p>{{ product.description }}</p>
+            {% endif %}
 
             <div class="sizes">
                 <p>Size:</p>
