modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/dashboard.html 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/home.html 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/master.html 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/nav.html 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signin.html 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signup.html 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/views.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	new file:   11. Django Ecommerce Website/ecommerce_website/static/css/admin/style.css 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc

--- a/11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/dashboard.html
+++ b/11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/dashboard.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Admin Dashboard</h1>
-</body>
-</html>
+{% if user.is_authenticated %}
+    {% include 'home.html' %}
+{% else %}
+    {% include 'signin.html' %}
+{% endif %}
+
+
