new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/forms.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/views.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/forms.py 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signin.html 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signup.html 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/views.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/static/css/admin/style.css

--- a/11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signin.html
+++ b/11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Login Form</h2>
+        <h2 class="form-heading">Sign in</h2>
         <form action="{% url 'signin' %}" method="POST">
             {% csrf_token %}
             <div class="img">
