--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html
@@ -26,7 +26,7 @@
                         {% else %}
                         <a href="#" class="login-button" id="login-button">Login</a>
                         <hr>
-                        <a href="#" class="register-button" id="signup-button">Signup</a>
+                        <a href="#" class="register-button" id="signup-button">Register</a>
                         {% endif %}
                     </div>
                 </li>
