modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/forms.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/forms.py 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/upload.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/add_product.html 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/views.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	new file:   11. Django Ecommerce Website/ecommerce_website/media/uploads/products/shoe-629645_1280.jpg 	modified:   11. Django Ecommerce Website/ecommerce_website/static/css/main.css 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/forms.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/forms.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/register.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html
@@ -26,7 +26,7 @@
                         {% else %}
                         <a href="#" class="login-button" id="login-button">Login</a>
                         <hr>
-                        <a href="#" class="register-button" id="signup-button">Register</a>
+                        <a href="{% url 'register' %}" class="register-button" >Register</a>
                         {% endif %}
                     </div>
                 </li>
@@ -39,6 +39,5 @@
 </nav>
 
 {% include 'login.html' %}
-{% include 'register.html' %}
 
 
