modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/__pycache__/views.cpython-311.pyc 	renamed:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/add_product.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/add_product.html 	new file:   11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/dashboard.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/home.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/home.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/master.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/master.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/nav.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/nav.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signin.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/signin.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/signup.html -> 11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/signup.html 	deleted:    11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/dashboard.html 	modified:   11. Django Ecommerce Website/ecommerce_website/admin_panel/views.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/register.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/register.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/register.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="login-container">
                     
-                    {% for field in forms %}
+                    {% for field in form %}
                     {{field.label}}
                     <div class="form-input"> {{field}}</div>
                     {% endfor %}
