--- a/11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/master.html
+++ b/11. Django Ecommerce Website/ecommerce_website/admin_panel/templates/crm/master.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
-    {% include 'nav.html' %}
+    {% include 'crm/nav.html' %}
     {% block content %}
         
     {% endblock content %}
