modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	new file:   11. Django Ecommerce Website/ecommerce_website/media/uploads/products/sandal-669372_1280.jpg 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/all_categories.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/all_categories.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/base.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/category.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/category.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/footer.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/hero.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/hero.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/index.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/login.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/login.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/navbar.html -> 11. Django Ecommerce Website/ecommerce_website/store/templates/store/navbar.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/pages/on_sale.html 	renamed:    11. Django Ecommerce Website/ecommerce_website/store/templates/product-card.html -> 11. Django Ecommerce Website/ecommerce_webs

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
 
 
 {% block title %} Bells {% endblock title %}
@@ -8,11 +8,11 @@
         
     <!-- Container -->
         <!-- Header -->
-        {% include 'hero.html' %}
+        {% include 'store/hero.html' %}
         <!-- Product Cart Container -->
         <div class="products-container">
             <!-- Product card -->
-            {% include 'product-card.html' %}
+            {% include 'store/product-card.html' %}
             
          </div> <!-- Product card container end -->
         
