--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html
@@ -11,13 +11,13 @@
 <body>
     
     <div class="body-container">
-        {% include 'navbar.html' %}
+        {% include 'store/navbar.html' %}
         <div class="container">
             {% block content %}
         
             {% endblock content %}
     </div>
-        {% include 'footer.html' %}
+        {% include 'store/footer.html' %}
     </div>
         
 
