--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/navbar.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/navbar.html
@@ -9,8 +9,9 @@
         <div class="navbar-links" id="navbar-links">
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="#">Products&#9652;</a></li>
-                <li><a href="{% url 'categories' %}">Category&#9662;</a></li>
+                <li><a href="{% url 'home' %}">Products</a></li>
+                <li class="dropdown">
+                    <a href="{% url 'categories' %}">Category</a></li>
                 <li class="dropdown">
                     
                     {% if user.is_authenticated %}
@@ -38,6 +39,6 @@
     </div>
 </nav>
 
-{% include 'login.html' %}
+{% include 'store/login.html' %}
 
 
