modified:   11. Django Ecommerce Website/ecommerce_website/static/css/main.css 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/pages/new.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/pages/on_sale.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/product-card.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/static/css/main.css
+++ b/11. Django Ecommerce Website/ecommerce_website/static/css/main.css
@@ -360,6 +360,11 @@
       font-size: 3rem
     }
   }
+
+  .section-title {
+    text-align: center;
+    background-color: white;
+  }
   
   .products-container {
     display: flex;
