--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html
@@ -12,15 +12,15 @@
         <div class="footer-column">
             <h5>Products</h5>
             <ul>
-                <li><a href="#"><span>&gt;</span> On Sale</a></li>
-                <li><a href="#"><span>&gt;</span> New Products</a></li>
+                <li><a href="{% url 'sale' %}"><span>&gt;</span> On Sale</a></li>
+                <li><a href="{% url 'new' %}"><span>&gt;</span> New Products</a></li>
                 <li><a href="#"><span>&gt;</span> Coming Soon</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h5>Category</h5>
             <ul>
-                <li><a href="#"><span>&gt;</span> New</a></li>
+                <li><a href="{% url 'new' %}"><span>&gt;</span> New</a></li>
                 <li><a href="#"><span>&gt;</span> Ex UK</a></li>
                 <li><a href="#"><span>&gt;</span> Kenya</a></li>
                 <li><a href="#"><span>&gt;</span> New</a></li>
