--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
@@ -10,35 +10,37 @@
         <!-- Header -->
         {% include 'store/hero.html' %}
         <!-- Product Cart Container -->
-        <div class="container-all">
-            <div class="section-title"><h1>Products</h1></div>
-            <section>
-                <div class="products-container">
-                    <!-- Product card -->
-                    {% include 'store/product-card.html' %}
-                </div> <!-- Product card container end -->    
-            </section>
+<div class="container-all">
+    <div class="section-title"><h1>Products</h1></div>
+    <section>
+        <div class="products-container">
+            <!-- Render all products -->
+            {% for product in products %}
+                {% include 'store/include/card.html' %} 
+            {% endfor %}
+        </div> <!-- Product card container end -->    
+    </section>
 
-            <div class="section-title"><h1>Sale</h1></div>
-            <section>
-                <div class="products-container">
-                    
-                    {% for product in sale %}
-                        {% include 'store/include/card.html' %} 
-                    {% endfor %}
-                </div>
-            </section>
-
-            <div class="section-title"><h1>New</h1></div>
-            <section>
-                <div class="products-container">
-                    
-                    {% for product in new %}
-                        {% include 'store/include/card.html' %} 
-                    {% endfor %}
-                </div>
-            </section>
-        
+    <div class="section-title"><h1><a href="{% url 'sale' %}">On Sale</a></h1></div>
+    <section>
+        <div class="products-container">
+            <!-- Render products on sale -->
+            {% for product in sale %}
+                {% include 'store/include/card.html' %} 
+            {% endfor %}
         </div>
+    </section>
+
+    <div class="section-title"><h1><a href="{% url 'new' %}">New Products</a></h1></div>
+    <section>
+        <div class="products-container">
+            <!-- Render new products -->
+            {% for product in new %}
+                {% include 'store/include/card.html' %} 
+            {% endfor %}
+        </div>
+    </section>
+</div>
+
 {% endblock content %}
     
