--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
@@ -9,7 +9,7 @@
     <!-- Container -->
         <!-- Header -->
         {% include 'store/hero.html' %}
-        <!-- Product Cart Container -->
+        <!-- Product Cards Container -->
 <div class="container-all">
     <div class="section-title"><h1>Products</h1></div>
     <section>
@@ -18,7 +18,7 @@
             {% for product in products %}
                 {% include 'store/include/card.html' %} 
             {% endfor %}
-        </div> <!-- Product card container end -->    
+        </div>  
     </section>
 
     <div class="section-title"><h1><a href="{% url 'sale' %}">On Sale</a></h1></div>
