modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0006_product_is_featured.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0007_remove_product_sale_price.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/0008_product_sale_price.py 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0006_product_is_featured.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0007_remove_product_sale_price.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/store/migrations/__pycache__/0008_product_sale_price.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/models.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
@@ -21,7 +21,7 @@
         </div>  
     </section>
 
-    <div class="section-title"><h1><a href="{% url 'sale' %}">On Sale</a></h1></div>
+    <div class="section-title"><h1><a href="{% url 'sale' %}">Products On Sale</a></h1></div>
     <section>
         <div class="products-container">
             <!-- Render products on sale -->
