modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html 	new file:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/pages/featured.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/pages/new.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/views.py

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/index.html
@@ -40,6 +40,16 @@
             {% endfor %}
         </div>
     </section>
+
+    <div class="section-title"><h1><a href="{% url 'featured' %}">Featured Products</a></h1></div>
+    <section>
+        <div class="products-container">
+            <!-- Render featured products -->
+            {% for product in featured %}
+                {% include 'store/include/card.html' %} 
+            {% endfor %}
+        </div>
+    </section>
 </div>
 
 {% endblock content %}
