modified:   11. Django Ecommerce Website/ecommerce_website/static/css/main.css 	modified:   11. Django Ecommerce Website/ecommerce_website/static/js/main.js 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/footer.html
@@ -44,7 +44,9 @@
     <hr>
 
     <div class="footer-end">
-        <p>&copy;Sqcodes | <span id="current-year">2023</span>. All Rights Reserved.</p>
+        <!-- <p>&copy;Sqcodes | <span id="current-year">2023</span>. All Rights Reserved.</p> -->
+        <p>&copy;Sqcodes | <span>{% now "Y" %}</span>. All Rights Reserved.</p>
+
     </div>
 </div> <!-- Footer end-->
 
