new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/__init__.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/admin.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/apps.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/models.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/urls.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/cart.py 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/context_processors.py 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/migrations/__pycache__/__init__.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/templates/cart/cart_summary.html 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/views.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/settings.py 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/navbar.html 	modified:   11. Django Ecomme

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}"> 
     <link rel="stylesheet" href="{% static 'css/product.css' %}"> 
 </head>
@@ -22,5 +23,31 @@
         
 
     <script src="{% static 'js/main.js' %}"></script>     
+    
+
+    <script>
+        $(document).on('click', '.add-to-cart', function(e){
+    e.preventDefault();
+    var product_id = $(this).data('product-id');
+    var product_qty = $('#qty-cart option:selected').text(); // Assuming you have a quantity dropdown
+    $.ajax({
+        type: 'POST',
+        url: '{% url "cart_add" %}',
+        data: {
+            product_id: product_id,
+            product_qty: product_qty,
+            csrfmiddlewaretoken: '{{ csrf_token }}',
+            action: 'post'
+        },
+        success: function(json){
+            $('#cart_quantity').text(json.qty);
+        },
+        error: function(xhr, errmsg, err){
+            console.log(xhr.status + ": " + xhr.responseText);
+        }
+    });
+});
+
+    </script>
 </body>
 </html>
