--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html
@@ -28,7 +28,8 @@
         {% endif %} 
         <div class="card-btn">
             <a href="{% url 'product' product.id %}"><button type="button">View</button></a>
-            <button type="button">Add to Cart</button>
+                <button type="button" class="add-to-cart" data-product-id="{{ product.id }}">Add to Cart</button>
+
         </div>
     </div>
     {% if product.is_sale %}
