--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
@@ -49,7 +49,7 @@
 
             <div class="quantity">
                 <input type="number" value="1" min="1">
-                <button>Add to Cart</button>
+                <button type="button" id="add-cart">Add to Cart</button>
             </div>
         </div>
     </div>
