modified:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/cart.py 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/context_processors.py 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/templates/cart/cart_summary.html 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/views.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/base.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/navbar.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html

--- a/11. Django Ecommerce Website/ecommerce_website/cart/templates/cart/cart_summary.html
+++ b/11. Django Ecommerce Website/ecommerce_website/cart/templates/cart/cart_summary.html
@@ -10,6 +10,21 @@
 {% block content %}
 <h1>Your Cart</h1>
 
+{% if cart_products %}
+
+{% for product in cart_products %}
+<div class="products-container">
+    <img src="{{ product.image.url }}" alt="" width="10%">
+    <p>{{product.name}}</p>
+    <p>$ {{product.price}}</p>
+</div>
+    
+{% endfor %}
+    
+    
+{% endif %}
+    
+    
 
 {% endblock content %}
     
