--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
@@ -48,10 +48,43 @@
             </div>
 
             <div class="quantity">
-                <input type="number" value="1" min="1">
-                <button type="button" id="add-cart">Add to Cart</button>
+                <!-- <input type="number" value="1" min="1"> -->
+
+                <select class="form-select form-select-sm" id="qty-cart">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+                <button type="button" value="{{ product.id }}" id="add-cart">Add to Cart</button>
             </div>
         </div>
     </div>
 
+
+    <script>
+        $(document).on('click', '#add-cart', function(e){
+            e.preventDefault();
+            $.ajax({
+                type: 'POST',
+                url: '{% url "cart_add" %}',
+                data: {
+                    product_id: $('#add-cart').val(),
+                    product_qty: $('#qty-cart option:selected').text(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                    action: 'post'
+                },
+
+                success: function(json){
+                    // console.log(json)
+                    document.getElementById("cart_quantity").textContent = json.qty
+                },
+
+                error: function(xhr, errmsg, err){
+
+                }
+            });
+        })
+    </script>
 {% endblock content %}
