--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html
@@ -28,7 +28,7 @@
         {% endif %} 
         <div class="card-btn">
             <a href="{% url 'product' product.id %}"><button type="button">View</button></a>
-                <button type="button" value="{{ product.id }}" id="cart-add">Add to Cart</button>
+                <button type="button" value="{{ product.id }}" id="add-cart">Add to Cart</button>
 
         </div>
     </div>
@@ -46,3 +46,4 @@
     {% endif %}
         
 </div>
+
