--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
@@ -49,14 +49,17 @@
 
             <div class="quantity">
                 <!-- <input type="number" value="1" min="1"> -->
-
-                <select class="form-select form-select-sm" id="qty-cart">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
+                
+                <select id="qty-cart">
+                    {% for quantity in quantity_list %}
+                        <option value="{{ quantity }}">{{ quantity }}</option>
+                    {% endfor %}
                 </select>
+                
+                
+                
+                
+            
                 <button type="button" value="{{ product.id }}" id="add-cart">Add to Cart</button>
             </div>
         </div>
